@@ -154,62 +154,67 @@ def execute(command, output_file, error_file):
     returns -- An integer exit code.  Zero indicates success; non-zero
     values indicate failure. """
     
+    mode = qm.track.config.state["mode"]
+
     # Check if this command requires an IDB connection.
-    if command.RequiresIdb():
-        # It does.  Make sure we're connected.
-        mode = qm.track.config.state["mode"]
-        assert mode != "none"
-
-        if mode == "remote":
-            # We're in remote mode.  Make sure this command doesn't
-            # require a local connection.
-            if command.RequiresLocalIdb():
-                raise RuntimeError, \
-                      "%s cannot be invoked on a remote IDB" \
-                      % command.GetCommand()
-            # Connect to the server.
-            server_url = qm.track.state["server_url"]
-            server = xmlrpclib.Server(server_url)
-            # Invoke the command on the server.
-            argument_list = command.GetArgumentList()
-            result = server.execute_command(argument_list)
-            # Unpack the results.
-            exit_code, output_text, error_text = result
-            # Write the returned texts to corresponding files.
-            output_file.write(output_text)
-            error_file.write(error_text)
-            # All done.
-            return exit_code
+    if command.RequiresIdb() and mode == "remote":
+        # We're in remote mode.  Make sure this command doesn't require
+        # a local connection.
+        if command.RequiresLocalIdb():
+            raise RuntimeError, \
+                  "%s cannot be invoked on a remote IDB" \
+                  % command.GetCommand()
+        # Connect to the server.
+        server_url = qm.track.state["server_url"]
+        server = xmlrpclib.Server(server_url)
+        # Invoke the command on the server.
+        argument_list = command.GetArgumentList()
+        result = server.execute_command(argument_list)
+        # Unpack the results.
+        exit_code, output_text, error_text = result
+        # Write the returned texts to corresponding files.
+        output_file.write(output_text)
+        error_file.write(error_text)
+        # All done.
+        return exit_code
         
-        elif mode == "local":
-            try:
-                command.Execute(output_file)
-                return 0
-            except qm.cmdline.CommandError, msg:
-                script_name = qm.track.state["script_name"]
-                error_file.write("%s: %s\n" % (script_name, msg))
-                error_file.write("Invoke %s --help for help with usage.\n"
-                                 % script_name)
-                return 2
-            except qm.UserError, msg:
-                # A user error should come with a message that is
-                # comprehensible to the user.
-                error_file.write(str(msg) + "\n")
-                return 1
-            except KeyboardInterrupt:
-                # User killed the server; let it through.
-                raise
-            except:
-                # For other exceptions, for now, just dump out the
-                # stack trace.
-                exception = qm.format_exception(sys.exc_info())
-                error_file.write(exception)
-                return 1
-
-    else:
-        # The command doesn't require a connection.  Go ahead with it.
-        command.Execute(output_file)
-        return 0
+    elif not command.RequiresIdb() or mode == "local":
+        try:
+            command.Execute(output_file)
+            return 0
+        except qm.cmdline.CommandError, msg:
+            script_name = qm.track.state["script_name"]
+            error_file.write("%s: %s\n" % (script_name, msg))
+            error_file.write("Invoke %s --help for help with usage.\n"
+                             % script_name)
+            return 2
+        except qm.UserError, msg:
+            # A user error should come with a message that is
+            # comprehensible to the user.
+            error_file.write(str(msg) + "\n")
+            return 1
+        except qm.ConfigurationError, msg:
+            # A configuration error should come with a message that is
+            # comprehensible to the user.
+            error_file.write(str(msg) + "\n")
+            return 1
+        except OSError, exception:
+            if hasattr(exception, "filename"):
+                message = "%s: %s" \
+                          % (exception.strerror, exception.filename)
+            else:
+                message = exception.strerrro
+            error_file.write(message + "\n")
+            return exception.errno
+        except KeyboardInterrupt:
+            # User killed the server; let it through.
+            raise
+        except:
+            # For other exceptions, for now, just dump out the
+            # stack trace.
+            exception = qm.format_exception(sys.exc_info())
+            error_file.write(exception)
+            return 1
 
 
 ########################################################################
