@@ -1,3 +1,10 @@
+2001-02-26  Alex Samuel  <samuel@codesourcery.com>
+
+	* qm/track/server.py (execute): Rearrange exception handling.
+	* qm/track/issue_class.py (IssueFieldIid.SetDefaultValue): New method.
+	* qm/track/config.py (initialize_idb): Check that the IDB path
+	doesn't exist.
+	
 2001-02-25  Alex Samuel  <samuel@codesourcery.com>
 
 	* qm/web.py (make_url_button): New function.
